# effmpeg

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c  recorder.webm
ffmpegg/: cmd_options.h  cmd_util.c  cmd_util.h  command.c  command.h  common.c  common.h  common_define.h  config.h  filter.c  filter.h  hw.c  internal.h  mathopts.h  open_files.c  open_files.h  transcode.c  transcode.h
